# sorrel

./: .gitmodules  AGENTS.md  AGENT_NATIVE_VERSION_CONTROL_REPORT.md  Cargo.toml  README.md  SORREL_AGENT_PROMPTS.md  SORREL_AGENT_TASKS.md  SORREL_AUTHORITY_PROMPTS.md  SORREL_PROGRESS.md  SORREL_PROTOTYPE_PLAN.md  SORREL_WEB_STARTER.patch
crates/sorrel-core/: Cargo.toml
crates/sorrel-core/src/: lib.rs  object.rs  permission.rs  store.rs
docs/: AGENT_WORKSPACE.md
scripts/: sync-conformance.sh  sync-submodule-pointers.sh
