[package]
name = "sorrel-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = "1.8.5"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
serde_json = "1.0.150"
tempfile = "3.27.0"

[lints]
workspace = true

